--- a/app/views/admin/users/_users.html.haml
+++ b/app/views/admin/users/_users.html.haml
@@ -1,4 +1,4 @@
-= dynamic_page_title "’10 Students: #{count_of_total_for(@users)}"
+= dynamic_page_title "2010 Students: #{count_of_total_for(@users)}"
 
 %table
   %colgroup
