--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,4 +1,4 @@
-= title "’10 Students"
+= title "2010 Students"
 
 .text
   .export= link_to "Export all users in CSV", admin_users_path(:format => 'csv')
