--- a/app/views/programs/_day_3.html.haml
+++ b/app/views/programs/_day_3.html.haml
@@ -5,10 +5,8 @@
       %h3
         %strong= "Group 1"
         = "Case Study"
-      -#%ul.document_list
-      -#  = list_documents_for_module(7)
   %tr
-    %td.time= "09:00"
+    %td.time= "09:15"
     %td.description.module.end
       %h3
         %strong= "Group 2"
@@ -17,4 +15,64 @@
     %td.time= "10:00"
     %td.description
       %h4= "Break"
-        
+  %tr
+    %td.time= "10:30"
+    %td.description.module.start
+      %h3
+        %strong= "Group 3"
+        = "Case Study"
+  %tr
+    %td.time= "11:15"
+    %td.description.module
+      %h3
+        %strong= "Group 4"
+        = "Case Study"
+  %tr
+    %td.time= "12:00"
+    %td.description.module.end
+      %h3
+        %strong= "Group 5"
+        = "Case Study"
+  %tr
+    %td.time= "12:45"
+    %td.description
+      %h4= "Lunch"
+  %tr
+    %td.time= "13:45"
+    %td.description.module.start
+      %h3
+        %strong= "Group 6"
+        = "Case Study"
+  %tr
+    %td.time= "14:30"
+    %td.description.module.end
+      %h3
+        %strong= "Group 7"
+        = "Case Study"
+  %tr
+    %td.time= "15:15"
+    %td.description
+      %h4= "Break"
+  %tr
+    %td.time= "15:45"
+    %td.description.module.start
+      %h3
+        %strong= "Group 8"
+        = "Case Study"
+  %tr
+    %td.time= "16:30"
+    %td.description.module
+      %h3
+        %strong= "Group 9"
+        = "Case Study"
+  %tr
+    %td.time= "17:15"
+    %td.description.module.end
+      %h3
+        = "Conclusion"
+      %ul.document_list
+        = list_documents_for_module(7)
+  %tr
+    %td.time= "18:00"
+    %td.description
+      %h4= "End"
