Move "Case Study" out of module in day 1

--- a/app/views/programs/_day_1.html.haml
+++ b/app/views/programs/_day_1.html.haml
@@ -49,11 +49,11 @@
         = list_documents_for_module(3)
   %tr
     %td.time= "16:30"
-    %td.description.module
+    %td.description.module.end
       %h4= "Speaker"
   %tr
     %td.time= "17:30"
-    %td.description.module.end
+    %td.description
       %h4= "Case Study"
   %tr
     %td.time= "18:00"
