--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,6 +1,6 @@
-= title "2010 Students"
+= title "#{session[:year]} Students"
 
 .text
   .export= link_to "Export all users in CSV", admin_users_path(:format => 'csv')
-  
+
   #users_table_wrap= render 'users'
