--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -1,33 +1,33 @@
 #sidebar
-  - if APPLICATIONS_OPEN && !user_signed_in? && !teacher_signed_in?
-    %h3= "2010 Application"
-    %p= "The applications are now open till the end of April 2010. Please use the button below to apply."
+  - if SiteSettings.applications_open && !user_signed_in? && !teacher_signed_in?
+    %h3= "#{Time.now.year} Application"
+    %p= "The applications are now open till the end of April #{Time.now.year}. Please use the button below to apply."
     - unless user_signed_in? || teacher_signed_in?
       .box
         = link_to new_user_application_path, :id => "registration_button" do
-          %span= "Apply for the 2010 course"
-  - unless APPLICATIONS_OPEN
-    %p= raw "We thank you for your interest.<br /> 2010 Registrations are now closed."
-    
+          %span= "Apply for the #{Time.now.year} course"
+  - unless SiteSettings.applications_open
+    %p= raw "We thank you for your interest.<br /> #{Time.now.year} Registrations are now closed."
+
   %h4= "Organizing Entities"
   %ul.entities
     %li.first= link_to image_tag("/images/epfl_logo.png", :alt => "EPFL Logo"), "http://www.epfl.ch", :onclick => 'window.open(this); return false'
     %li= link_to "SRI #{content_tag(:em, '(Tech transfer Office)')}".html_safe, "http://sri.epfl.ch", :onclick => 'window.open(this); return false'
     %li.last= link_to "CDM", "http://cdm.epfl.ch", :onclick => 'window.open(this); return false'
-  
+
   %h4= "Course Information"
   %ul
     %li= "Language: English"
-    %li= "When: June 8 & 9 and October 6, 2010"
+    %li= "When: June 7 & 8 and October 5, 2011"
     %li= "Number of credits: 2 or 3 (subject to final confirmation later in April)"
     %li= "Number of students: 18 max. Decided upon a selection balancing several factors including multi-disciplinarity"
     %li= "Form of Exam: Project report and oral presentation"
     %li
-      = "Delay to submit application: End of April 2010"
-      - if APPLICATIONS_OPEN && !user_signed_in? && !teacher_signed_in?
+      = "Delay to submit application: End of April 2011"
+      - if SiteSettings.applications_open && !user_signed_in? && !teacher_signed_in?
         = raw " through #{link_to 'online application', new_user_application_path}"
     %li= raw "Location: #{link_to 'EPFL Science Park, PSE-C building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false'}"
-    
+
   %h4= "More info"
   %p= raw "If you have any question, please contact us through the following #{link_to 'form', contact_path}."
 .spacer
