Updated module 6 content + sidebar content

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -19,14 +19,14 @@
   %ul
     %li= "Language: English"
     %li= "When: June 7 & 8 and October 5, 2011"
-    %li= "Number of credits: 2 or 3 (subject to final confirmation later in April)"
+    %li= "Number of credits: 2"
     %li= "Number of students: 18 max. Decided upon a selection balancing several factors including multi-disciplinarity"
     %li= "Form of Exam: Project report and oral presentation"
     %li
       = "Delay to submit application: End of April 2011"
       - if SiteSettings.applications_open && !user_signed_in? && !teacher_signed_in?
         = raw " through #{link_to 'online application', new_user_application_path}"
-    %li= raw "Location: #{link_to 'EPFL Science Park, PSE-C building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false'}"
+    %li= raw "Location: #{link_to 'EPFL Science Park, PSE-D building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false'}"
 
   %h4= "More info"
   %p= raw "If you have any question, please contact us through the following #{link_to 'form', contact_path}."
