Updated Google Maps link

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -26,7 +26,7 @@
       = "Delay to submit application: End of April 2011"
       - if SiteSettings.applications_open && !user_signed_in? && !teacher_signed_in?
         = raw " through #{link_to 'online application', new_user_application_path}"
-    %li= raw "Location: #{link_to 'EPFL Science Park, PSE-D building', 'http://bit.ly/aWDL19', :onclick => 'window.open(this); return false'}"
+    %li= raw "Location: #{link_to 'EPFL Science Park, PSE-D building', 'http://bit.ly/h2vHOz', :onclick => 'window.open(this); return false'}"
 
   %h4= "More info"
   %p= raw "If you have any question, please contact us through the following #{link_to 'form', contact_path}."
