--- a/app/views/admin/messages/index.html.haml
+++ b/app/views/admin/messages/index.html.haml
@@ -1,4 +1,4 @@
-= title "#{params[:trashed] ? "Trashed m" : "M"}essages"
+= title_and_page_title "#{params[:trashed] ? "Trashed m" : "M"}essages"
 
 .text
   .actions_right
