--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -1,10 +1,15 @@
-= title_and_page_title "#{current_user ? current_user.year : Time.now.year} Course Schedule"
-        
+= title_and_page_title "#{session[:year]} Course Schedule"
+
 #program_content
-  = render "/programs/#{current_user ? current_user.year : Time.now.year}/program_content"
+  = render "/programs/#{session[:year]}/program_content"
 
 = content_for :sidebar do
   #sidebar
+    - if teacher_signed_in? && current_teacher.years.many?
+      = form_tag :program, :method => 'get', :id => "change_year" do
+        = select_tag "year", options_for_select(current_teacher.years, session[:year])
+        = submit_tag "Change year"
+    
     %h4= raw "General information<br/> and documents"
     %ul.document_list
       = list_documents_for_module(0)
