--- a/app/views/admin/messages/_messages.html.haml
+++ b/app/views/admin/messages/_messages.html.haml
@@ -1,5 +1,3 @@
-= dynamic_page_title "#{params[:trashed] ? "Trashed m" : "M"}essages: #{count_of_total_for(@messages)}"
-
 %table
   %colgroup
     - 5.times do
@@ -17,3 +15,4 @@
 - elsif @messages.total_entries > Message.per_page
   .right_links= link_to "View all", admin_messages_path(:all => true, :trashed => params[:trashed]), :remote => true
   = will_paginate(:params => { :format => nil }, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
+  = page_entries_info @messages
