--- a/app/views/admin/messages/show.html.haml
+++ b/app/views/admin/messages/show.html.haml
@@ -5,11 +5,11 @@
   
   .actions_left
     - if @message.unreplied?
-      = update_field_form(@message, :replied_at, Time.now, "Mark as replied", {}, :id => "reply_message_#{@message.id}", :class => "button mark_as_replied")
+      = update_field_form(@message, :replied_at, Time.now.utc, "Mark as replied", {}, :id => "reply_message_#{@message.id}", :class => "button mark_as_replied")
     - if @message.trashed?
       = update_field_form(@message, :trashed_at, nil, "Move to inbox", {}, :id => "untrash_message_#{@message.id}", :class => "button move_to_inbox")
     - else
-      = update_field_form(@message, :trashed_at, Time.now, "Move to trash", {}, :id => "trash_message_#{@message.id}", :class => "button move_to_trash")
+      = update_field_form(@message, :trashed_at, Time.now.utc, "Move to trash", {}, :id => "trash_message_#{@message.id}", :class => "button move_to_trash")
     .spacer
   .actions_right
     = back_to_inbox_or_trash(@message)
