--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -1,12 +1,14 @@
 %tr[user]{ :class => cycle("", "alt") }
   %td
+    - if session[:admin_year] == 'all'
+      = "’#{user.year.to_s[-2,2]}"
     - if user.selected?
       = link_to image_tag("/images/admin/selected.png", :alt => "selected"), admin_user_path(user)
   %td.gender= link_to image_tag("/images/admin/#{user.gender}.png", :alt => user.gender), admin_user_path(user)
-  %td= link_to full_name(user, true), admin_user_path(user)
+  %td= link_to user.full_name(:reverse => true), admin_user_path(user)
   %td= user.school
   %td= user.thesis_supervisor
   %td.datetime
     %span.date= sexy_date(user.confirmed_at)
   %td= link_to("edit", edit_admin_user_path(user))
-  %td= update_field_form(user, :trashed_at, Time.now, "delete", {}, :confirm => "Are you sure?", :class => "button delete" )
+  %td= update_field_form(user, :trashed_at, Time.now.utc, "delete", {}, :confirm => "Are you sure?", :class => "button delete" )
