--- a/app/views/admin/users/_users.html.haml
+++ b/app/views/admin/users/_users.html.haml
@@ -1,15 +1,9 @@
-= dynamic_page_title "#{session[:year]} Students: #{count_of_total_for(@users)}"
-
-= form_tag [:admin, :users], :method => 'get' do
-  = select_tag "year", options_for_select((2010..Time.now.year), session[:year])
-  = submit_tag "Change year"
-
 %table
   %colgroup
     - 8.times do
       %col{ :class => cycle("even", "odd") }
   %tr
-    %th= link_to "’#{session[:year][-2,2]}", admin_users_path(sort_parameters('selected_at', params)), :remote => true
+    %th= link_to session[:admin_year] == 'all' ? 'Year' : "’#{session[:admin_year][-2,2]}", admin_users_path(sort_parameters('selected_at', params)), :remote => true
     %th= link_to "Gender", admin_users_path(sort_parameters('gender', params)), :remote => true
     %th= link_to "Name", admin_users_path(sort_parameters('last_name', params)), :remote => true
     %th= link_to "School", admin_users_path(sort_parameters('school', params)), :remote => true
@@ -24,3 +18,4 @@
 - elsif @users.total_entries > User.per_page
   .right_links= link_to "View all", admin_users_path(:all => true), :remote => true
   = will_paginate(:params => { :format => nil }, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
+  = page_entries_info @users
