--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,6 +1,8 @@
-= title "#{session[:year]} Students"
+= title_and_page_title "#{session[:admin_year] == 'all' ? '' : "#{session[:admin_year]} "}Students"
 
 .text
-  .export= link_to "Export all users in CSV", admin_users_path(:format => 'csv')
-
+  .export
+    = render '/admin/shared/change_year_form'
+    = link_to "Export all users in CSV", admin_users_path(:format => 'csv')
+    
   #users_table_wrap= render 'users'
