--- a/app/views/admin/users/show.html.haml
+++ b/app/views/admin/users/show.html.haml
@@ -1,10 +1,10 @@
-= title "Student: #{full_name(@user)}"
+= title "Student: #{@user.full_name}"
 
 .text.sheet
   .left_box
     = image_tag "/images/admin/#{@user.gender}_big.png", :alt => @user.gender
   .right_box
-    %h3= full_name(@user)
+    %h3= @user.full_name
     %p.email
       = image_tag "/images/admin/email.png", :alt => "Email"
       = mail_to @user.email
