--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -2,4 +2,4 @@
 #footer
   %p
     = link_to("Contact", contact_path)
-    = raw " | &copy; #{Time.now.year} EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
+    = raw " | &copy; #{Time.now.utc.year} EPFL , SRI, CM 2-Station 10, CH-1015 Lausanne, tel. +41 (0)21 693 70 23"
