--- a/app/views/users/applications/new.html.haml
+++ b/app/views/users/applications/new.html.haml
@@ -1,7 +1,7 @@
-= title "#{Time.now.year} Application"
+= title "#{Time.now.utc.year} Application"
 
 .text
-  %h3= "Application form for mintt #{Time.now.year}"
+  %h3= "Application form for mintt #{Time.now.utc.year}"
   %p
     %strong= "June 7 & 8 and October 5, 2011"
   %p= "Please fill out the following form precisely and clearly."
@@ -20,8 +20,8 @@
       = f.input :linkedin_url, :label => "LinkedIn url"
       = f.input :thesis_supervisor, :required => true
       = f.input :thesis_subject, :as => :text, :required => true
-      = f.input :thesis_registration_date, :as => :date, :start_year => Time.now.year - 5, :end_year => Time.now.year + 5, :prompt => true, :selected => resource.nil? || resource.thesis_registration_date.nil? ? 0 : resource.thesis_registration_date, :label => "EPFL Doctoral studies enrollment date (the date you officially started working on defining your thesis topic)"
-      = f.input :thesis_admission_date, :as => :date, :start_year => Time.now.year - 5, :end_year => Time.now.year + 5, :prompt => true, :selected => resource.nil? || resource.thesis_admission_date.nil? ? 0 : resource.thesis_admission_date, :label => "EPFL Doctoral studies admission date (the date you officially started working on an approved thesis topic)"
+      = f.input :thesis_registration_date, :as => :date, :start_year => Time.now.utc.year - 5, :end_year => Time.now.utc.year + 5, :prompt => true, :selected => resource.nil? || resource.thesis_registration_date.nil? ? 0 : resource.thesis_registration_date, :label => "EPFL Doctoral studies enrollment date (the date you officially started working on defining your thesis topic)"
+      = f.input :thesis_admission_date, :as => :date, :start_year => Time.now.utc.year - 5, :end_year => Time.now.utc.year + 5, :prompt => true, :selected => resource.nil? || resource.thesis_admission_date.nil? ? 0 : resource.thesis_admission_date, :label => "EPFL Doctoral studies admission date (the date you officially started working on an approved thesis topic)"
       = f.input :supervisor_authorization, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Do you have the agreement of your thesis supervisor to participate to mintt?", :required => true
       = f.input :doctoral_school_rules, :as => :radio, :collection => [["Yes", "yes"], ["No", "no"]], :label => "Are you subject to EPFL doctoral school regulations and do you need credits?", :required => true
       = f.input :thesis_invention, :as => :text, :label => "Have you made an invention in the course of your thesis? If yes, could you briefly describe it?:"
