--- a/app/views/admin/documents/_documents.html.haml
+++ b/app/views/admin/documents/_documents.html.haml
@@ -10,3 +10,6 @@
     %th
     %th
   = render @documents
+
+= will_paginate(:params => { :format => nil }, :renderer => 'WillPaginate::ViewHelpers::LinkRendererRemote')
+= page_entries_info @documents
