--- a/app/views/admin/documents/new.html.haml
+++ b/app/views/admin/documents/new.html.haml
@@ -1,5 +1,3 @@
-= title "New document"
+= title_and_page_title "Create a new document"
 
-= page_title "Creating a new document"
-  
 = render :partial => 'form'
