--- a/app/views/admin/messages/_message.html.haml
+++ b/app/views/admin/messages/_message.html.haml
@@ -12,8 +12,9 @@
   %td.datetime
     %span.date= sexy_date(message.created_at)
     %span.time= sexy_time(message.created_at)
-  %td
-    - if message.trashed?
-      = update_field_form(message, :trashed_at, nil, "untrash", {}, :id => "untrash_message_#{message.id}", :class => "button delete")
-    - else
-      = update_field_form(message, :trashed_at, Time.now.utc, "trash", {}, :id => "trash_message_#{message.id}", :class => "button delete")
+  - unless params[:trashed]
+    %td
+      - if message.trashed?
+        = update_field_form(message, :trashed_at, nil, "untrash", {}, :id => "untrash_message_#{message.id}", :class => "button delete")
+      - else
+        = update_field_form(message, :trashed_at, Time.now.utc, "trash", {}, :id => "trash_message_#{message.id}", :class => "button delete")
