--- a/app/views/admin/teachers/show.html.haml
+++ b/app/views/admin/teachers/show.html.haml
@@ -7,15 +7,12 @@
       = image_tag "/images/admin/email.png", :alt => "Email"
       = mail_to @teacher.email
     %p
-      = content_tag(:strong, "Speaker in module:")
-      = module_title(@teacher.module_id)
-    %p
       = content_tag(:strong, "Active in:")
       = @teacher.years.to_sentence
   .application_date
-    %p.edit= link_to "edit teacher", edit_admin_teacher_path(@teacher), :class => "edit"
+    %p.edit= link_to "edit teacher", [:edit, :admin, @teacher], :class => "edit"
   .spacer
-  
+
   - unless @teacher.invitation_accepted?
     .break
     %p
