--- a/app/views/admin/users/_users.html.haml
+++ b/app/views/admin/users/_users.html.haml
@@ -3,7 +3,7 @@
     - 8.times do
       %col{ :class => cycle("even", "odd") }
   %tr
-    %th= link_to session[:admin_year] == 'all' ? 'Year' : "’#{session[:admin_year][-2,2]}", admin_users_path(sort_parameters('selected_at', params)), :remote => true
+    %th= link_to "’#{session[:admin_year][-2,2]}", admin_users_path(sort_parameters('selected_at', params)), :remote => true
     %th= link_to "Gender", admin_users_path(sort_parameters('gender', params)), :remote => true
     %th= link_to "Name", admin_users_path(sort_parameters('last_name', params)), :remote => true
     %th= link_to "School", admin_users_path(sort_parameters('school', params)), :remote => true
