--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,8 +1,8 @@
-= title_and_page_title "#{session[:admin_year] == 'all' ? '' : "#{session[:admin_year]} "}Students"
+= title_and_page_title "Students (#{session[:admin_year]})"
 
 .text
   .export
     = render '/admin/shared/change_year_form'
     = link_to "Export all users in CSV", admin_users_path(:format => 'csv')
-    
+
   #users_table_wrap= render 'users'
