--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,8 +1,10 @@
 = title_and_page_title "Forgot your password?"
 
+%p.title_desc= "Enter your email address to receive an email with instructions to reset your password."
+
 = semantic_form_for [resource_name, resource], :url => password_path(resource_name), :html => { :class => "main" } do |f|
   = f.inputs do
     = f.input :email, :required => false
-    
+
   = f.buttons do
-    = f.commit_button "Send me reset password instructions"
+    = f.commit_button "Send"
