--- a/app/views/admin/mail_templates/edit.html.haml
+++ b/app/views/admin/mail_templates/edit.html.haml
@@ -35,3 +35,6 @@
     - when /teacher/
       %li Invitation link : <span>teacher.invitation_link</span>
       %li Email : <span>teacher.email</span>
+
+:javascript
+  $('mail_template_content').focus();
