--- a/app/views/admin/teachers/edit.html.haml
+++ b/app/views/admin/teachers/edit.html.haml
@@ -9,3 +9,6 @@
   = f.buttons do
     = f.commit_button "Update teacher"
   = render '/shared/required_mention'
+
+:javascript
+  $('teacher_name').focus();
