--- a/app/views/programs/index.html.haml
+++ b/app/views/programs/index.html.haml
@@ -1,7 +1,7 @@
 = title_and_page_title "#{session[:year]} Course Schedule"
 
 #program_content
-  = render "/programs/#{session[:year]}/program_content"
+  = render "/programs/program_content"
 
 = content_for :sidebar do
   #sidebar
