--- a/app/views/programs/index.js.erb
+++ b/app/views/programs/index.js.erb
@@ -1,1 +1,1 @@
-$('program_content').update('<%= escape_javascript(render "/programs/#{session[:year]}/program_content") %>');
+$('program_content').update('<%= escape_javascript(render "/programs/program_content") %>');
