--- a/app/views/admin/teachers/invitations/new.html.haml
+++ b/app/views/admin/teachers/invitations/new.html.haml
@@ -7,3 +7,6 @@
   = f.buttons do
     = f.commit_button "Send invitation"
   = render '/shared/required_mention'
+
+:javascript
+  $('teacher_email').focus();
