--- a/app/views/admin/teaching_modules/_form.html.haml
+++ b/app/views/admin/teaching_modules/_form.html.haml
@@ -7,3 +7,6 @@
   = f.buttons do
     = f.commit_button "#{@teaching_module.new_record? ? "Create" : "Update"} module"
   = render '/shared/required_mention'
+
+:javascript
+  $('teaching_module_title').focus();
