--- a/app/views/programs/_day_2.html.haml
+++ b/app/views/programs/_day_2.html.haml
@@ -4,7 +4,7 @@
     %td.description.module.start
       %h3
         %strong= "Module 4"
-        = "Licensing"
+        = @modules[4].try(:title)
       %ul.document_list
         = list_documents_for_module(4)
   %tr
@@ -14,7 +14,7 @@
   %tr
     %td.time= "10:30"
     %td.description.module.end
-      %h4= "Licensing"
+      %h4= @modules[4].try(:title)
   %tr
     %td.time= "12:00"
     %td.description
@@ -24,7 +24,7 @@
     %td.description.module.start.end
       %h3
         %strong= "Module 5"
-        = "Start-up?"
+        = @modules[5].try(:title)
       %ul.document_list
         = list_documents_for_module(5)
   %tr
@@ -36,7 +36,7 @@
     %td.description.module.start.end
       %h3
         %strong= "Module 6"
-        = "Sales"
+        = @modules[6].try(:title)
       %ul.document_list
         = list_documents_for_module(6)
   %tr
